--- a/homepage.html
+++ b/homepage.html
@@ -5,9 +5,21 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Document</title>
+    <link rel="stylesheet" href="style.css">
+    <title>Meagan Makinson</title>
 </head>
 <body>
-    
+    <nav class= "nav-list">
+            <a href= "homepage.html">Home</a>
+            <a href= "projects.html">My Projects</a>
+            <a href="resume">Resume</a>
+    </nav>    
+    <header>Meagan Makinson</header>   
 </body>
+    <img src= "https://i.imgur.com/yFkIAXM.jpg"class= "profile-picture">
+        <div> Hello! I am...</div>
+    <h1>Meagan Makinson</h1>
+        <h2>Software Developer</h2>
+            <p>Here is mnore information about me... eoitoiewrhtren  iohrgrh eowhroiehg oerhgorhegh  oeirhgorehgo re oehrgioerhg hergerhgoihreoighrehg; eorhgoerhoerhgirhg erghorehg  irhegoerhgoher  eoirhgoerhgoih oehrgoehr oerhgo rehgo ehrgohrorhghreoh oerhgoerhgoh Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
+            </p>
 </html>
