project page started

--- a/projects.html
+++ b/projects.html
@@ -6,9 +6,21 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Document</title>
+    <link rel="stylesheet" href="style.css">
+    <title>My Projects</title>
 </head>
 <body>
-    
+    <nav class= "nav-list">
+            <a href= "homepage.html">Home</a>
+            <a href= "projects.html">My Projects</a>
+            <a href="resume">Resume</a>
+    </nav>    
+    <header>Meagan Makinson</header>
 </body>
+    <h2>My Projects</h2>
+    <h2>Garden Supply Store</h2>
+        <section>
+            <img src=
+        </section>
+
 </html>
