borders added to see elements, flex-box styling added

--- a/resume.html
+++ b/resume.html
@@ -6,9 +6,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link rel="stylesheet" href="style.css">
-    <title>Curriculum Vitae</title>
+    <title>Resume</title>
 </head>
 <body>
-    
+    dhgrhgoirhiogrioegnin ogrgnorgn ngoringoiein oinfoirngirn oingiorng
 </body>
 </html>
