nav bar link to resume fixed on projects page

--- a/projects.html
+++ b/projects.html
@@ -13,7 +13,7 @@
     <nav class= "nav-list">
             <a href= "homepage.html">Home</a>
             <a href= "projects.html">My Projects</a>
-            <a href="resume">Resume</a>
+            <a href="resume.html">Resume</a>
     </nav>    
     <header>Meagan Makinson</header>
 </body>
