header added to projects page

--- a/projects.html
+++ b/projects.html
@@ -10,12 +10,16 @@
     <title>My Projects</title>
 </head>
 <body>
-    <nav class= "nav-list">
-            <a href= "homepage.html">Home</a>
-            <a href= "projects.html">My Projects</a>
-            <a href="resume.html">Resume</a>
-    </nav>    
-    <header>Meagan Makinson</header>
+    <header class="header">
+        <h1>Meagan Makinson</h1>
+            <nav >
+                <ul class= "site-nav">
+                    <li><a href= "homepage.html">Home</a></li>
+                    <li><a href= "projects.html">My Projects</a></li>
+                    <li><a href= "resume.html">Resume</a></li>
+                </ul>
+            </nav>    
+    </header>   
 </body>
     <h2>My Projects</h2>
     <h2>Garden Supply Store</h2>
