--- a/resume.html
+++ b/resume.html
@@ -9,6 +9,16 @@
     <title>Resume</title>
 </head>
 <body>
+        <header class="header">
+                <h1>Meagan Makinson</h1>
+                    <nav >
+                        <ul class= "site-nav">
+                            <li><a href= "homepage.html">Home</a></li>
+                            <li><a href= "projects.html">My Projects</a></li>
+                            <li><a href= "resume.html">Resume</a></li>
+                        </ul>
+                    </nav>    
+            </header>   
     dhgrhgoirhiogrioegnin ogrgnorgn ngoringoiein oinfoirngirn oingiorng
 </body>
 </html>
