--- a/projects.html
+++ b/projects.html
@@ -21,10 +21,21 @@
             </nav>    
     </header>   
 </body>
-    <h2>My Projects</h2>
-    <h2>Garden Supply Store</h2>
-        <section>
+    <main>
+        <div><h2>My Projects</h2></div>
+        <div><h2>Lazy River Nursery and Garden Supply</h2></div>
+            <div class= "home-content">
+                <div><img src="w1d2-small-business-html-Meagan-M/starter_files/images/store-interior.jpg" alt="Interior of a garden store with plants and colorful pots" class= store-image></div>
+            <!-- <div><img src= "https://i.imgur.com/yFkIAXM.jpg"class= "profile-picture"></div> -->
+            <!-- <div class= "bio">   
+                    <p>Hello! I am...</p> -->
+                <!-- <h2>Meagan Makinson</h2>
+                <h2>Software Developer</h2>
+                    <p></p> -->
+                </div>
+            </div>
+    </main> 
             <img src=
-        </section>
+        
 
 </html>
