--- a/projects.html
+++ b/projects.html
@@ -9,33 +9,39 @@
     <link rel="stylesheet" href="style.css">
     <title>My Projects</title>
 </head>
-<body>
-    <header class="header">
-        <h1>Meagan Makinson</h1>
-            <nav >
-                <ul class= "site-nav">
-                    <li><a href= "homepage.html">Home</a></li>
-                    <li><a href= "projects.html">My Projects</a></li>
-                    <li><a href= "resume.html">Resume</a></li>
-                </ul>
-            </nav>    
-    </header>   
-</body>
-    <main>
-        <div><h2>My Projects</h2></div>
-        <div><h2>Lazy River Nursery and Garden Supply</h2></div>
+    <body>
+        <header class="header">
+            <h1>Meagan Makinson</h1>
+                <nav >
+                    <ul class= "site-nav">
+                        <li><a href= "homepage.html">Home</a></li>
+                        <li><a href= "projects.html">My Projects</a></li>
+                        <li><a href= "resume.html">Resume</a></li>
+                    </ul>
+                </nav>    
+        </header>   
+        <main>
+            <div><h2>My Projects</h2></div>
             <div class= "home-content">
-                <div><img src="w1d2-small-business-html-Meagan-M/starter_files/images/store-interior.jpg" alt="Interior of a garden store with plants and colorful pots" class= store-image></div>
-            <!-- <div><img src= "https://i.imgur.com/yFkIAXM.jpg"class= "profile-picture"></div> -->
-            <!-- <div class= "bio">   
-                    <p>Hello! I am...</p> -->
-                <!-- <h2>Meagan Makinson</h2>
-                <h2>Software Developer</h2>
-                    <p></p> -->
+                <div><img src="store-interior.jpg" alt="Interior of a garden store with plants and colorful pots" class= store-image></div>
+                <div class= "bio">   
+                    <div><h2>Lazy River Nursery and Garden Supply</h2></div> 
+                    <div>
+                        <p>Created website for garden store using HTML and CSS. blah blah blah blah
+                        </p>
+                    </div>
                 </div>
             </div>
-    </main> 
-            <img src=
-        
-
+            <div class= "home-content">
+                    <div><img src="tea.jpg" alt="Pot and 2 cups of tea with tea leaves on the table to the left" class= tea-image></div>
+                    <div class= "bio">   
+                        <div><h2>Lucky Cat Tea Company</h2></div> 
+                        <div>
+                            <p>Website using HTML and CSS. Added online store features. blah blah blah blah
+                            </p>
+                        </div>
+                    </div>
+                </div>
+        </main> 
+    </body>         
 </html>
