--- a/projects.html
+++ b/projects.html
@@ -21,8 +21,8 @@
                 </nav>    
         </header>   
         <main>
-            <div><h2>My Projects</h2></div>
-            <div class= "home-content">
+            <div><h2 class= projects>My Projects</h2></div>
+            <div class= project-desc>
                 <div><img src="store-interior.jpg" alt="Interior of a garden store with plants and colorful pots" class= store-image></div>
                 <div class= "bio">   
                     <div><h2>Lazy River Nursery and Garden Supply</h2></div> 
@@ -32,7 +32,7 @@
                     </div>
                 </div>
             </div>
-            <div class= "home-content">
+            <div class= "project-desc">
                     <div><img src="tea.jpg" alt="Pot and 2 cups of tea with tea leaves on the table to the left" class= tea-image></div>
                     <div class= "bio">   
                         <div><h2>Lucky Cat Tea Company</h2></div> 
