--- a/resume.html
+++ b/resume.html
@@ -8,17 +8,40 @@
     <link rel="stylesheet" href="style.css">
     <title>Resume</title>
 </head>
-<body>
+    <body>
         <header class="header">
-                <h1>Meagan Makinson</h1>
-                    <nav >
-                        <ul class= "site-nav">
-                            <li><a href= "homepage.html">Home</a></li>
-                            <li><a href= "projects.html">My Projects</a></li>
-                            <li><a href= "resume.html">Resume</a></li>
-                        </ul>
-                    </nav>    
-            </header>   
-    dhgrhgoirhiogrioegnin ogrgnorgn ngoringoiein oinfoirngirn oingiorng
-</body>
+            <h1>Meagan Makinson</h1>
+                <nav >
+                    <ul class= "site-nav">
+                        <li><a href= "homepage.html">Home</a></li>
+                        <li><a href= "projects.html">My Projects</a></li>
+                        <li><a href= "resume.html">Resume</a></li>
+                    </ul>
+                </nav>    
+        </header>   
+        <main>
+            <div><h2 class= projects>Resume</h2></div>
+                <div class= project-desc>
+                    <div class= "bio">   
+            <div><h2>Meagan Makinson</h2></div> 
+                    <div>
+                         <h3>Email: MeaganMakinson80@gmail.com
+                         </h3>
+                        <h3>Phone: 702.622.5129</h3>
+                        </div>
+                        </div>
+                    </div>
+                    <div class= "project-desc">
+                         <div class= "bio">   
+                                <div><h2>Employment History</h2></div> 
+                                <div>
+                                    <h3>Durham Public Schools</h3>
+                                    <h3>August 2016-April 2019</h3>
+                                    <h3>Occupational Therapist</h3>
+                                    <p>This is where I tell you about the work I did... some other time because I am busy writing code and CSS right now :)Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum. </p>
+                                </div>
+                            </div>
+                        </div>
+                </main> 
+    </body>
 </html>
