trying to get the resume page to work properly. adjust CSS classes

--- a/projects.html
+++ b/projects.html
@@ -23,7 +23,7 @@
         <main>
             <div><h2 class= projects>My Projects</h2></div>
             <div class= project-desc>
-                <div><img src="store-interior.jpg" alt="Interior of a garden store with plants and colorful pots" class= store-image></div>
+                <div><img src="store-interior.jpg" alt="Interior of a garden store with plants and colorful pots" class= "project-images"></div>
                 <div class= "bio">   
                     <div><h2>Lazy River Nursery and Garden Supply</h2></div> 
                     <div>
@@ -33,7 +33,7 @@
                 </div>
             </div>
             <div class= "project-desc">
-                    <div><img src="tea.jpg" alt="Pot and 2 cups of tea with tea leaves on the table to the left" class= tea-image></div>
+                    <div><img src="tea.jpg" alt="Pot and 2 cups of tea with tea leaves on the table to the left" class= "project-images"></div>
                     <div class= "bio">   
                         <div><h2>Lucky Cat Tea Company</h2></div> 
                         <div>
