added classes to info section and employment history

--- a/resume.html
+++ b/resume.html
@@ -21,20 +21,26 @@
         </header>   
         <main>
             <div class= "resume-info">
-            <div><h2>Resume</h2></div>
+            <div class= "resume-title"><h2>Resume</h2></div>
+            <div class= "contact-info">
             <div><h2>Meagan Makinson</h2></div> 
-            <div>
+            <div class="contact-info">
                 <p>Email: MeaganMakinson80@gmail.com
                 </p>
                 <p>Phone: 702.622.5129</p>
-                <p>what happens if I do this?</p>
+                <p class= "add-bottom-margin">Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
             </div>
-            <div><h2>Employment History</h2></div> 
+            </div>
+            <div class="contact-info"><h2>Employment History</h2></div> 
             <div>
                 <h3>Durham Public Schools</h3>
-                <h3>August 2016-April 2019</h3>
-                <h3>Occupational Therapist</h3>
+                <div>
+                <p>August 2016-April 2019</p>
+                <p>Occupational Therapist</p>
+                </div>
+                <div>
                     <p>This is where I tell you about the work I did... Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum. </p>
+                </div>
             </div>
             <div>
                 <h3>Some Other Job</h3>
